@@ -87,7 +87,7 @@ plugins = [
 		   'gdb-io-envir.c', 'gdb-io-frame.c', 'gdb-io-read.c', 'gdb-io-run.c',
 		   'gdb-io-stack.c', 'gdb-lex.c', 'gdb-ui-break.c', 'gdb-ui-envir.c',
 		   'gdb-ui-frame.c',  'gdb-ui-locn.c', 'gdb-ui-main.c',
-		   'geanydebug.c']), # source files
+		   'geanygdb.c']), # source files
 		 [ 'geanygdb', 'geanygdb/src' ], # include dirs
 		 [ [ 'elf.h', '', False ], [ 'elf_abi.h', '', False ] ]
 		 ),
